--- a/deploy/app/config/services.yml
+++ b/deploy/app/config/services.yml
@@ -60,3 +60,10 @@ services:
     crawler_client_prerender_io:
         class: App\CrawlerBundle\Client\PrenderIoClient
         arguments: [%prerender_io_token%]
+
+    app.elastica.model.transformer:
+        class: App\CoreBundle\Elastica\ElasticaToModelTransformer
+        calls:
+            - [ setPropertyAccessor, ["@fos_elastica.property_accessor"] ]
+        tags:
+            - { name: fos_elastica.elastica_to_model_transformer.app.company }
