--- a/deploy/app/config/parameters_development.yml
+++ b/deploy/app/config/parameters_development.yml
@@ -12,3 +12,6 @@ parameters:
     aws_s3_region: us-west-1
 
     crawler_client: crawler_client_prerender_io
+
+    fos_elastica_servers:
+            - {host: localhost, port: 9200}
