--- a/deploy/src/App/CoreBundle/Resources/config/services.yml
+++ b/deploy/src/App/CoreBundle/Resources/config/services.yml
@@ -9,3 +9,26 @@ services:
         arguments: [~, App\CoreBundle\Entity\FormData, AppCoreBundle:FormDataAdmin]
         tags:
             - { name: sonata.admin, manager_type: orm, group: admin, label: FormData }
+
+    app.elastica.model.transformer:
+            class: App\CoreBundle\Elastica\ElasticaToModelTransformer
+            calls:
+                - [ setPropertyAccessor, ["@fos_elastica.property_accessor"] ]
+            tags:
+                - { name: fos_elastica.elastica_to_model_transformer.app.company }
+
+    app.search.repository.base:
+        class: MediaMonks\CoreBundle\Elastica\Repository\BaseRepository
+
+
+    app.search.repository.page:
+        class: MediaMonks\CoreBundle\Elastica\Repository\PageRepository
+
+    app.search.repository.page_crawled:
+        class: MediaMonks\CoreBundle\Elastica\Repository\PageCrawledRepository
+
+    app.search.repository.tag:
+        class: MediaMonks\CoreBundle\Elastica\Repository\TagRepository
+
+    app.search.repository.tab_page:
+        class: MediaMonks\CoreBundle\Elastica\Repository\TabPageRepository
