--- a/deploy/src/App/FrontEndBundle/Resources/config/services.yml
+++ b/deploy/src/App/FrontEndBundle/Resources/config/services.yml
@@ -1,1 +1,8 @@
 services:
+    app.seo_route_provider:
+        class: App\FrontEndBundle\Routing\SeoPageRouteProvider
+        arguments:
+            - @app.search.repository.page
+            - @fos_elastica.finder.published.page
+            - @app.search.repository.page_crawled
+            - @fos_elastica.finder.published.page_crawled
