--- a/deploy/app/config/services.yml
+++ b/deploy/app/config/services.yml
@@ -3,6 +3,16 @@ parameters:
 
 services:
 
+  custom_validator_mapping_cache:
+        class: Symfony\Component\Validator\Mapping\Cache\DoctrineCache
+        arguments:
+            - @custom_validator_mapping_cache_apcu
+
+    custom_validator_mapping_cache_apcu:
+        class: Doctrine\Common\Cache\ApcuCache
+        calls:
+            - [setNamespace, [%validator.mapping.cache.prefix%]]
+
     session.handler.pdo:
         class:     Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
         public:    false
