--- a/deploy/app/config/config_production.yml
+++ b/deploy/app/config/config_production.yml
@@ -2,6 +2,18 @@ imports:
     - { resource: config.yml }
     - { resource: parameters_production.yml }
 
+framework:
+    validation:
+        cache: custom_validator_mapping_cache
+    serializer:
+        cache: serializer.mapping.cache.apc
+
+doctrine:
+    orm:
+        metadata_cache_driver: apcu
+        result_cache_driver: apcu
+        query_cache_driver: apcu
+
 monolog:
     handlers:
         main:
