--- a/deploy/composer.json
+++ b/deploy/composer.json
@@ -23,10 +23,9 @@
     },
     "prefer-stable": true,
     "require": {
-        "php": "^5.5.9|^7.0",
-        "symfony/cache": "^3.1",
-        "symfony/symfony": "^2.8",
-        "doctrine/orm": "^2.4.8",
+        "php": ">=5.5.9",
+        "symfony/symfony": "~2.7",
+        "doctrine/orm": "~2.5",
         "doctrine/doctrine-bundle": "~1.4",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
