--- a/deploy/app/config/config_production.yml
+++ b/deploy/app/config/config_production.yml
@@ -2,17 +2,17 @@ imports:
     - { resource: config.yml }
     - { resource: parameters_production.yml }
 
-#framework:
-#    validation:
-#        cache: custom_validator_mapping_cache
-#    serializer:
-#        cache: serializer.mapping.cache.apcu
+framework:
+    validation:
+        cache: custom_validator_mapping_cache
+    serializer:
+        cache: serializer.mapping.cache.apcu
 
-#doctrine:
-#    orm:
-#        metadata_cache_driver: apcu
-#        result_cache_driver: apcu
-#        query_cache_driver: apcu
+doctrine:
+    orm:
+        metadata_cache_driver: apcu
+        result_cache_driver: apcu
+        query_cache_driver: apcu
 
 monolog:
     handlers:
