--- a/deploy/composer.json
+++ b/deploy/composer.json
@@ -26,6 +26,8 @@
         "php": ">=5.5.9",
         "symfony/symfony": "~2.7",
         "doctrine/orm": "~2.5",
+        "symfony/cache": "^3.1",
+        "doctrine/cache": "*",
         "doctrine/doctrine-bundle": "~1.4",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
