--- a/deploy/app/config/config_uat.yml
+++ b/deploy/app/config/config_uat.yml
@@ -2,17 +2,17 @@ imports:
     - { resource: config.yml }
     - { resource: parameters_uat.yml }
 
-#framework:
-#    validation:
-#        cache: validator.mapping.cache.apc
-#    serializer:
-#        cache: serializer.mapping.cache.apc
+framework:
+    validation:
+        cache: custom_validator_mapping_cache
+    serializer:
+        cache: serializer.mapping.cache.apc
 
-#doctrine:
-#    orm:
-#        metadata_cache_driver: apc
-#        result_cache_driver: apc
-#        query_cache_driver: apc
+doctrine:
+    orm:
+        metadata_cache_driver: apcu
+        result_cache_driver: apcu
+        query_cache_driver: apcu
 
 monolog:
     handlers:
