--- a/deploy/composer.json
+++ b/deploy/composer.json
@@ -49,7 +49,8 @@
         "liuggio/excelbundle": "^2.1",
         "exercise/htmlpurifier-bundle": "^0.2.2",
         "friendsofsymfony/jsrouting-bundle": "^1.5",
-        "friendsofsymfony/elastica-bundle": "dev-master"
+        "friendsofsymfony/elastica-bundle": "dev-master",
+        "symfony-cmf/routing-bundle": "1.1.*@dev"
 
     },
     "require-dev": {
