--- a/deploy/src/App/CoreBundle/Resources/config/services.yml
+++ b/deploy/src/App/CoreBundle/Resources/config/services.yml
@@ -10,25 +10,25 @@ services:
         tags:
             - { name: sonata.admin, manager_type: orm, group: admin, label: FormData }
 
-    #app.elastica.model.transformer:
-    #        class: App\CoreBundle\Elastica\ElasticaToModelTransformer
-    #        calls:
-    #            - [ setPropertyAccessor, ["@fos_elastica.property_accessor"] ]
-    #        tags:
-    #            - { name: fos_elastica.elastica_to_model_transformer.app.company }
+    app.elastica.model.transformer:
+            class: App\CoreBundle\Elastica\ElasticaToModelTransformer
+            calls:
+                - [ setPropertyAccessor, ["@fos_elastica.property_accessor"] ]
+            tags:
+                - { name: fos_elastica.elastica_to_model_transformer.app.company }
 
     app.search.repository.base:
-        class: MediaMonks\CoreBundle\Elastica\Repository\BaseRepository
+        class: App\CoreBundle\Elastica\Repository\BaseRepository
 
 
     app.search.repository.page:
-        class: MediaMonks\CoreBundle\Elastica\Repository\PageRepository
+        class: App\CoreBundle\Elastica\Repository\PageRepository
 
     app.search.repository.page_crawled:
-        class: MediaMonks\CoreBundle\Elastica\Repository\PageCrawledRepository
+        class: App\CoreBundle\Elastica\Repository\PageCrawledRepository
 
     app.search.repository.tag:
-        class: MediaMonks\CoreBundle\Elastica\Repository\TagRepository
+        class: App\CoreBundle\Elastica\Repository\TagRepository
 
     app.search.repository.tab_page:
-        class: MediaMonks\CoreBundle\Elastica\Repository\TabPageRepository
+        class: App\CoreBundle\Elastica\Repository\TabPageRepository
