--- a/deploy/src/App/FrontEndBundle/Resources/config/services.yml
+++ b/deploy/src/App/FrontEndBundle/Resources/config/services.yml
@@ -3,6 +3,7 @@ services:
         class: App\FrontEndBundle\Routing\SeoPageRouteProvider
         arguments:
             - @app.search.repository.page
-            #- @fos_elastica.finder.published.page
+            - @fos_elastica.finder.published.page
             - @app.search.repository.page_crawled
-            #- @fos_elastica.finder.published.page_crawled
+            - @fos_elastica.finder.published.page_crawled
+            - @doctrine.orm.entity_manager
