--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,31 @@
             "email": "erik.stielstra@mediamonks.com"
         },
         {
-          "name": "Jeroen Visser",
-          "email": "jeroen.visser@mediamonks.com"
+            "name": "Jeroen Visser",
+            "email": "jeroen.visser@mediamonks.com"
         }
     ],
     "require": {
         "composer/installers": "^1.0.20",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "^8.1",
+        "drupal/core": "8.2.*",
         "drush/drush": "~8.1",
         "drupal/console": "^0.11.3",
-        "mediamonks/mm_rest": "^1.0@alpha"
+        "drupal/menu_admin_per_menu": "^1.0",
+        "drupal/metatag": "1.0-beta11",
+        "drupal/paragraphs": "1.0",
+        "drupal/restui": "1.13",
+        "drupal/search_api": "1.0-beta3",
+        "drupal/search_api_solr": "1.0-beta1",
+        "drupal/token": "1.0-beta2",
+        "mediamonks/mm_rest": "1.0-alpha4",
+        "mediamonks/mm_slug": "1.0-alpha4",
+        "mediamonks/mm_decoupled": "^1.0",
+        "mediamonks/mm_prerender": "1.0-beta1",
+        "mediamonks/mm_release_tracker": "^1.0",
+        "mediamonks/mm_gaia": "^1.0",
+        "drupal/facets": "1.0-alpha7",
+        "drupal/admin_toolbar": "^1.18"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
@@ -46,8 +60,12 @@
             "url": "git@git.assembla.com:mediamonks-drupal.mm_rest.git"
         },
         "mediamonks-drupal-domainmenu": {
-          "type": "git",
-          "url": "git@git.assembla.com:mediamonks^mediamonks-drupal.mm_domainmenu.git"
+            "type": "git",
+            "url": "git@git.assembla.com:mediamonks^mediamonks-drupal.mm_domainmenu.git"
+        },
+        "mediamonks-drupal-slug": {
+            "type": "git",
+            "url": "git@git.assembla.com:mediamonks-drupal.mm_slug.git"
         },
         "drupal": {
             "type": "composer",
@@ -81,6 +99,16 @@
     },
     "extra": {
         "patches": {
+            "drupal/menu_admin_per_menu": {
+                "Menu edit form is not visible on the node edit page": "https://www.drupal.org/files/issues/2796537-6.patch"
+            },
+            "mediamonks/mm_rest": {
+                "Do not override some parent methods": "patches/mm_rest-use_parent_methods.patch",
+                "Do not match dynamic page cache responses": "patches/mm_rest-do_not_match_dynamicpagecache.patch"
+            },
+            "mediamonks/mm_gaia": {
+                "Fix wrong version path. Remove when the MR get merged.": "patches/mm_gaia-fix_wrong_version_path.patch"
+            }
         },
         "installer-paths": {
             "deploy/htdocs/core": ["type:drupal-core"],
