--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -19,6 +19,7 @@ module:
   menu_admin_per_menu: 0
   menu_ui: 0
   mm_release_tracker: 0
+  mm_rest: 0
   mm_slug: 0
   node: 0
   options: 0
@@ -30,6 +31,7 @@ module:
   search: 0
   serialization: 0
   shortcut: 0
+  spectrum_rest: 0
   system: 0
   taxonomy: 0
   text: 0
