Add paragraph Block Pan Buy Measure.

--- a/deploy/var/drupal-config/sync/editor.editor.basic_html.yml
+++ b/deploy/var/drupal-config/sync/editor.editor.basic_html.yml
@@ -18,31 +18,11 @@ settings:
           name: Formatting
           items:
             - Bold
+            - Underline
             - Italic
-        -
-          name: Linking
-          items:
-            - DrupalLink
-            - DrupalUnlink
-        -
-          name: Lists
-          items:
-            - BulletedList
-            - NumberedList
-        -
-          name: Media
-          items:
-            - Blockquote
-            - DrupalImage
-        -
-          name: 'Block Formatting'
-          items:
-            - Format
-        -
-          name: Tools
-          items:
-            - Source
   plugins:
+    language:
+      language_list: un
     stylescombo:
       styles: ''
 image_upload:
@@ -51,5 +31,5 @@ image_upload:
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
