--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockplanbuymeasure.field_contents.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockplanbuymeasure.field_contents.yml
@@ -1,21 +1,20 @@
-uuid: 1e8ab0a2-6172-4956-9724-afc5ec8ff1ea
+uuid: df9f98bb-9775-4f6e-acd4-74e3d8abb446
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_blocks
-    - node.type.page
-    - paragraphs.paragraphs_type.blockheromain
+    - field.storage.paragraph.field_contents
     - paragraphs.paragraphs_type.blockplanbuymeasure
+    - paragraphs.paragraphs_type.content
   module:
     - entity_reference_revisions
-id: node.page.field_blocks
-field_name: field_blocks
-entity_type: node
-bundle: page
-label: Blocks
+id: paragraph.blockplanbuymeasure.field_contents
+field_name: field_contents
+entity_type: paragraph
+bundle: blockplanbuymeasure
+label: Contents
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -23,19 +22,18 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
-      blockheromain: blockheromain
-      blockplanbuymeasure: blockplanbuymeasure
+      content: content
     target_bundles_drag_drop:
       blockheromain:
-        enabled: true
         weight: 5
-      slideimagecta:
-        weight: 6
         enabled: false
       blockplanbuymeasure:
-        enabled: true
         weight: 6
+        enabled: false
       content:
+        enabled: true
         weight: 7
+      slideimagecta:
+        weight: 8
         enabled: false
 field_type: entity_reference_revisions
