Switch field_description text format to restricted_html. Restore basic_html text format .

--- a/deploy/var/drupal-config/sync/editor.editor.basic_html.yml
+++ b/deploy/var/drupal-config/sync/editor.editor.basic_html.yml
@@ -18,11 +18,31 @@ settings:
           name: Formatting
           items:
             - Bold
-            - Underline
             - Italic
+        -
+          name: Linking
+          items:
+            - DrupalLink
+            - DrupalUnlink
+        -
+          name: Lists
+          items:
+            - BulletedList
+            - NumberedList
+        -
+          name: Media
+          items:
+            - Blockquote
+            - DrupalImage
+        -
+          name: 'Block Formatting'
+          items:
+            - Format
+        -
+          name: Tools
+          items:
+            - Source
   plugins:
-    language:
-      language_list: un
     stylescombo:
       styles: ''
 image_upload:
@@ -31,5 +51,5 @@ image_upload:
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: null
-    height: null
+    width: 0
+    height: 0
