--- a/deploy/var/drupal-config/sync/field.field.paragraph.content.field_description.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.content.field_description.yml
@@ -19,8 +19,8 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    basic_html: basic_html
-    restricted_html: '0'
+    restricted_html: restricted_html
+    basic_html: '0'
     full_html: '0'
     plain_text: '0'
 field_type: text_long
