--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.default.yml
@@ -3,8 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.article.body
+    - field.field.node.article.field_content
+    - field.field.node.article.field_excerpt
     - field.field.node.article.field_image
+    - field.field.node.article.field_read_time
     - field.field.node.article.field_tags
     - image.style.large
     - node.type.article
@@ -19,12 +21,19 @@ targetEntityType: node
 bundle: article
 mode: default
 content:
-  body:
-    type: text_default
-    weight: 0
+  field_content:
+    weight: 102
+    label: above
     settings: {  }
     third_party_settings: {  }
-    label: hidden
+    type: text_default
+  field_excerpt:
+    weight: 101
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
   field_image:
     type: image
     weight: -1
@@ -33,6 +42,14 @@ content:
       image_link: ''
     third_party_settings: {  }
     label: hidden
+  field_read_time:
+    weight: 103
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
   field_tags:
     type: entity_reference_label
     weight: 10
