--- a/deploy/var/drupal-config/sync/node.type.article.yml
+++ b/deploy/var/drupal-config/sync/node.type.article.yml
@@ -1,13 +1,19 @@
 uuid: b32567ec-0251-4e93-a099-a79702c8ceae
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus: {  }
+    parent: ''
 _core:
   default_config_hash: AeW1SEDgb1OTQACAWGhzvMknMYAJlcZu0jljfeU3oso
-name: Article
+name: 'New Article'
 type: article
 description: 'Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
 help: ''
 new_revision: true
-preview_mode: 1
+preview_mode: 0
 display_submitted: true
