--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.article.rss.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.article.rss.yml
@@ -19,5 +19,8 @@ content:
   links:
     weight: 100
 hidden:
+  field_content: true
+  field_excerpt: true
   field_image: true
+  field_read_time: true
   field_tags: true
