--- a/deploy/var/drupal-config/sync/field.field.paragraph.slideimagecta.field_image.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.slideimagecta.field_image.yml
@@ -18,7 +18,7 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_directory: '[date:custom:Y]-[date:custom:m]'
+  file_directory: 'images/slideimagecta/[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png jpg jpeg'
   max_filesize: ''
   max_resolution: ''
