--- a/deploy/var/drupal-config/sync/core.entity_view_display.user.user.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_title
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -15,6 +16,13 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_title:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
   member_for:
     weight: 5
   user_picture:
