--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "mediamonks/mm_release_tracker": "^1.0",
         "mediamonks/mm_gaia": "^1.0",
         "drupal/facets": "1.0-alpha7",
-        "drupal/admin_toolbar": "^1.18"
+        "drupal/admin_toolbar": "^1.18",
+        "drupal/video_embed_field": "1.3"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
