--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_blocks
     - node.type.page
+    - paragraphs.paragraphs_type.blockdetailpagenews
     - paragraphs.paragraphs_type.blockheromain
     - paragraphs.paragraphs_type.blocklatestnews
     - paragraphs.paragraphs_type.blockplanbuymeasure
@@ -27,6 +28,7 @@ settings:
       blockheromain: blockheromain
       blockplanbuymeasure: blockplanbuymeasure
       blocklatestnews: blocklatestnews
+      blockdetailpagenews: blockdetailpagenews
     target_bundles_drag_drop:
       blockheromain:
         enabled: true
@@ -41,6 +43,9 @@ settings:
         weight: 7
         enabled: false
       blocklatestnews:
+        enabled: true
+        weight: 9
+      blockdetailpagenews:
         enabled: true
         weight: 9
       broadcastschedule:
