--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -8,6 +8,7 @@ dependencies:
     - paragraphs.paragraphs_type.blockdetailpagenews
     - paragraphs.paragraphs_type.blockheromain
     - paragraphs.paragraphs_type.blocklatestnews
+    - paragraphs.paragraphs_type.blockmainproducts
     - paragraphs.paragraphs_type.blockplanbuymeasure
   module:
     - entity_reference_revisions
@@ -29,6 +30,7 @@ settings:
       blockplanbuymeasure: blockplanbuymeasure
       blocklatestnews: blocklatestnews
       blockdetailpagenews: blockdetailpagenews
+      blockmainproducts: blockmainproducts
     target_bundles_drag_drop:
       blockheromain:
         enabled: true
@@ -53,5 +55,11 @@ settings:
         enabled: false
       showmetric:
         weight: 13
+        enabled: false
+      blockmainproducts:
+        enabled: true
+        weight: 14
+      tile:
+        weight: 20
         enabled: false
 field_type: entity_reference_revisions
