--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -10,6 +10,7 @@ dependencies:
     - paragraphs.paragraphs_type.blockheromain
     - paragraphs.paragraphs_type.blockinformativeanimatingmap
     - paragraphs.paragraphs_type.blocklandingpagesmodules
+    - paragraphs.paragraphs_type.blocklandingpagesmodulesb
     - paragraphs.paragraphs_type.blocklatestnews
     - paragraphs.paragraphs_type.blockmainproducts
     - paragraphs.paragraphs_type.blockplanbuymeasure
@@ -37,16 +38,17 @@ settings:
       blockmainproducts: blockmainproducts
       blockheroheader: blockheroheader
       blocklandingpagesmodules: blocklandingpagesmodules
+      blocklandingpagesmodulesb: blocklandingpagesmodulesb
     target_bundles_drag_drop:
       blockheromain:
         enabled: true
         weight: 5
-      slideimagecta:
-        weight: 6
-        enabled: false
       blockplanbuymeasure:
         enabled: true
         weight: 6
+      slideimagecta:
+        weight: 6
+        enabled: false
       content:
         weight: 7
         enabled: false
@@ -74,6 +76,9 @@ settings:
       storyblock:
         weight: 16
         enabled: false
+      storyblockb:
+        weight: 18
+        enabled: false
       tile:
         weight: 20
         enabled: false
@@ -83,4 +88,7 @@ settings:
       slidesimple:
         weight: 23
         enabled: false
+      blocklandingpagesmodulesb:
+        enabled: true
+        weight: 24
 field_type: entity_reference_revisions
