--- a/deploy/htdocs/api/mock/filter-content/knowledge-center.json
+++ b/deploy/htdocs/api/mock/filter-content/knowledge-center.json
@@ -1,6 +1,8 @@
 {
 	"statusCode": 200,
 	"data": {
+		"pageTitle":  "Knowledge center",
+		"headerTheme": 0,
 		"blocks": [
 			{
 				"id": "articleTeaser",
