--- a/deploy/htdocs/api/mock/filter-content/knowledge-center.json
+++ b/deploy/htdocs/api/mock/filter-content/knowledge-center.json
@@ -9,6 +9,7 @@
 				"data": {
 					"heading": "Go Beyond High Profile Sport Events",
 					"paragraph": "Lorem ipsum dolor sit ametm conse ctetuer.",
+					"target": "knowledge-center/dummy-article",
 					"image": {
 						"normal": "data/image/latest/latest-article-image-1.jpg",
 						"small": "data/image/latest/latest-article-image-1.jpg",
@@ -35,6 +36,7 @@
 				"data": {
 					"heading": "Go Beyond High Profile Sport Events",
 					"paragraph": "Lorem ipsum dolor sit ametm conse ctetuer.",
+					"target": "knowledge-center/dummy-article",
 					"image": {
 						"normal": "data/image/latest/latest-article-image-1.jpg",
 						"small": "data/image/latest/latest-article-image-1.jpg",
@@ -74,6 +76,7 @@
 				"data": {
 					"heading": "Go Beyond High Profile Sport Events",
 					"paragraph": "Lorem ipsum dolor sit ametm conse ctetuer.",
+					"target": "knowledge-center/dummy-article",
 					"image": {
 						"normal": "data/image/latest/latest-article-image-1.jpg",
 						"small": "data/image/latest/latest-article-image-1.jpg",
