--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -9,6 +9,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   entity_reference_revisions: 0
+  facets: 0
   field: 0
   field_ui: 0
   file: 0
@@ -21,6 +22,7 @@ module:
   mm_decoupled: 0
   mm_release_tracker: 0
   mm_rest: 0
+  mm_rest_search: 0
   mm_slug: 0
   node: 0
   options: 0
@@ -30,6 +32,8 @@ module:
   rest: 0
   restui: 0
   search: 0
+  search_api: 0
+  search_api_db: 0
   serialization: 0
   shortcut: 0
   spectrum_rest: 0
