--- a/deploy/var/drupal-config/sync/block.block.seven_login.yml
+++ b/deploy/var/drupal-config/sync/block.block.seven_login.yml
@@ -1,6 +1,6 @@
 uuid: b063874f-79b7-4f0e-9dd0-7888c4325df6
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - user
@@ -10,8 +10,8 @@ _core:
   default_config_hash: IItlF4SKHgxduIysVQdvirDJ_v3HGuAviOkidAOJYRE
 id: seven_login
 theme: seven
-region: content
-weight: 10
+region: '-1'
+weight: -4
 provider: null
 plugin: user_login_block
 settings:
