--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "drupal/console": "^0.11.3",
         "drupal/menu_admin_per_menu": "^1.0",
         "drupal/metatag": "1.0-beta11",
-        "drupal/paragraphs": "1.0",
+        "drupal/paragraphs": "dev-1.x#fa525bd",
         "drupal/restui": "1.13",
         "drupal/search_api": "1.0-beta3",
         "drupal/search_api_solr": "1.0-beta1",
@@ -37,7 +37,8 @@
         "mediamonks/mm_gaia": "^1.0",
         "drupal/facets": "1.0-alpha7",
         "drupal/admin_toolbar": "^1.18",
-        "drupal/video_embed_field": "1.3"
+        "drupal/video_embed_field": "1.3",
+        "drupal/field_group": "1.0-rc6"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
