--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -11,6 +11,7 @@ module:
   entity_reference_revisions: 0
   facets: 0
   field: 0
+  field_group: 0
   field_ui: 0
   file: 0
   filter: 0
@@ -27,7 +28,6 @@ module:
   node: 0
   options: 0
   page_cache: 0
-  paragraphs: 0
   path: 0
   rest: 0
   restui: 0
@@ -47,6 +47,7 @@ module:
   views_ui: 0
   menu_link_content: 1
   views: 10
+  paragraphs: 11
   standard: 1000
 theme:
   stable: 0
