--- a/deploy/var/drupal-config/sync/core.entity_form_display.node.page.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.node.page.default.yml
@@ -24,11 +24,12 @@ content:
     type: entity_reference_paragraphs
     weight: 31
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
+      title: Block
+      title_plural: Blocks
+      edit_mode: preview
       add_mode: dropdown
       form_display_mode: default
+      default_paragraph_type: _none
     third_party_settings: {  }
   path:
     type: path
