--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockhowtoadvertise.field_link.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockhowtoadvertise.field_link.yml
@@ -1,20 +1,20 @@
-uuid: b2f89466-2ec1-4b49-b32b-5fdb261a8b6d
+uuid: 27e07787-9dc8-4972-9e64-f935ca724f5e
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_blocks
-    - node.type.page
+    - field.storage.paragraph.field_link
     - paragraphs.paragraphs_type.blockhowtoadvertise
+    - paragraphs.paragraphs_type.link
   module:
     - entity_reference_revisions
-id: node.page.field_blocks
-field_name: field_blocks
-entity_type: node
-bundle: page
-label: Blocks
+id: paragraph.blockhowtoadvertise.field_link
+field_name: field_link
+entity_type: paragraph
+bundle: blockhowtoadvertise
+label: Link
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -22,18 +22,21 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
-      blockhowtoadvertise: blockhowtoadvertise
+      link: link
     target_bundles_drag_drop:
-      blockhowtoadvertise:
+      link:
         enabled: true
-        weight: 5
-      broadcastschedule:
         weight: 6
-        enabled: false
-      showmetric:
+      blockhowtoadvertise:
         weight: 7
         enabled: false
-      styles:
+      broadcastschedule:
         weight: 8
+        enabled: false
+      showmetric:
+        weight: 9
+        enabled: false
+      styles:
+        weight: 10
         enabled: false
 field_type: entity_reference_revisions
