--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_blocks
     - node.type.page
     - paragraphs.paragraphs_type.blockhowtoadvertise
+    - paragraphs.paragraphs_type.blockimagecalltoactions
   module:
     - entity_reference_revisions
 id: node.page.field_blocks
@@ -23,6 +24,7 @@ settings:
   handler_settings:
     target_bundles:
       blockhowtoadvertise: blockhowtoadvertise
+      blockimagecalltoactions: blockimagecalltoactions
     target_bundles_drag_drop:
       blockhowtoadvertise:
         enabled: true
@@ -35,5 +37,17 @@ settings:
         enabled: false
       styles:
         weight: 8
+        enabled: false
+      calltoaction:
+        weight: 9
+        enabled: false
+      blockimagecalltoactions:
+        enabled: true
+        weight: 11
+      link:
+        weight: 13
+        enabled: false
+      step:
+        weight: 15
         enabled: false
 field_type: entity_reference_revisions
