--- a/deploy/var/drupal-config/sync/field.field.paragraph.blockimagecalltoactions.field_styles.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.blockimagecalltoactions.field_styles.yml
@@ -14,7 +14,7 @@ entity_type: paragraph
 bundle: blockimagecalltoactions
 label: Styles
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
@@ -30,11 +30,17 @@ settings:
       blockhowtoadvertise:
         weight: 9
         enabled: false
+      calltoaction:
+        weight: 9
+        enabled: false
       broadcastschedule:
         weight: 10
         enabled: false
       link:
         weight: 11
+        enabled: false
+      blockimagecarousel:
+        weight: 12
         enabled: false
       showmetric:
         weight: 12
@@ -45,7 +51,4 @@ settings:
       styles:
         enabled: true
         weight: 14
-      calltoaction:
-        enabled: false
-        weight: 9
 field_type: entity_reference_revisions
