--- a/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
+++ b/deploy/var/drupal-config/sync/field.field.node.page.field_blocks.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.page
     - paragraphs.paragraphs_type.blockhowtoadvertise
     - paragraphs.paragraphs_type.blockimagecalltoactions
+    - paragraphs.paragraphs_type.blockimagecarousel
   module:
     - entity_reference_revisions
 id: node.page.field_blocks
@@ -25,6 +26,7 @@ settings:
     target_bundles:
       blockhowtoadvertise: blockhowtoadvertise
       blockimagecalltoactions: blockimagecalltoactions
+      blockimagecarousel: blockimagecarousel
     target_bundles_drag_drop:
       blockhowtoadvertise:
         enabled: true
@@ -47,7 +49,13 @@ settings:
       link:
         weight: 13
         enabled: false
+      blockimagecarousel:
+        enabled: true
+        weight: 13
       step:
         weight: 15
+        enabled: false
+      slide:
+        weight: 18
         enabled: false
 field_type: entity_reference_revisions
